wrenlet-sys/src/wren040.rs


    /// Reads a boolean value from `slot`.
    ///
    /// It is an error to call this if the slot does not contain a boolean value.
    pub fn wrenGetSlotBool(vm: *mut WrenVM, slot: ::core::ffi::c_int) -> bool;

    /// Reads a byte array from `slot`.
    ///
    /// The memory for the returned string is owned by Wren. You can inspect it
    /// while in your foreign method, but cannot keep a pointer to it after the
    /// function returns, since the garbage collector may reclaim it.
    ///
    /// Returns a pointer to the first byte of the array and fill `length` with the
    /// number of bytes in the array.
    ///
    /// It is an error to call this if the slot does not contain a string.
    pub fn wrenGetSlotBytes(
        vm: *mut WrenVM,
        slot: ::core::ffi::c_int,
        length: *mut ::core::ffi::c_int,
    ) -> *const ::core::ffi::c_char;

    /// Reads a number from `slot`.
    ///
    /// It is an error to call this if the slot does not contain a number.
    pub fn wrenGetSlotDouble(vm: *mut WrenVM, slot: ::core::ffi::c_int) -> f64;

    /// Reads a foreign object from `slot` and returns a pointer to the foreign data
    /// stored with it.
    ///
    /// It is an error to call this if the slot does not contain an instance of a
    /// foreign class.
    pub fn wrenGetSlotForeign(
        vm: *mut WrenVM,
        slot: ::core::ffi::c_int,
    ) -> *mut ::core::ffi::c_void;

    /// Reads a string from `slot`.
    ///
    /// The memory for the returned string is owned by Wren. You can inspect it
    /// while in your foreign method, but cannot keep a pointer to it after the
    /// function returns, since the garbage collector may reclaim it.
    ///
    /// It is an error to call this if the slot does not contain a string.
    pub fn wrenGetSlotString(
        vm: *mut WrenVM,
        slot: ::core::ffi::c_int,
    ) -> *const ::core::ffi::c_char;

    /// Creates a handle for the value stored in `slot`.
    ///
    /// This will prevent the object that is referred to from being garbage collected
    /// until the handle is released by calling [`wrenReleaseHandle()`].
    pub fn wrenGetSlotHandle(vm: *mut WrenVM, slot: ::core::ffi::c_int) -> *mut WrenHandle;

    /// Stores the boolean `value` in `slot`.
    pub fn wrenSetSlotBool(vm: *mut WrenVM, slot: ::core::ffi::c_int, value: bool);

    /// Stores the array `length` of `bytes` in `slot`.
    ///
    /// The bytes are copied to a new string within Wren's heap, so you can free
    /// memory used by them after this is called.
    pub fn wrenSetSlotBytes(
        vm: *mut WrenVM,
        slot: ::core::ffi::c_int,
        bytes: *const ::core::ffi::c_char,
        length: usize,
    );

    /// Stores the numeric `value` in `slot`.
    pub fn wrenSetSlotDouble(vm: *mut WrenVM, slot: ::core::ffi::c_int, value: f64);

    /// Creates a new instance of the foreign class stored in `classSlot` with `size`
    /// bytes of raw storage and places the resulting object in `slot`.
    ///
    /// This does not invoke the foreign class's constructor on the new instance. If
    /// you need that to happen, call the constructor from Wren, which will then
    /// call the allocator foreign method. In there, call this to create the object
    /// and then the constructor will be invoked when the allocator returns.
    ///
    /// Returns a pointer to the foreign object's data.
    pub fn wrenSetSlotNewForeign(
        vm: *mut WrenVM,
        slot: ::core::ffi::c_int,
        classSlot: ::core::ffi::c_int,
        size: usize,
    ) -> *mut ::core::ffi::c_void;

    /// Stores a new empty list in `slot`.
    pub fn wrenSetSlotNewList(vm: *mut WrenVM, slot: ::core::ffi::c_int);

    /// Stores a new empty map in `slot`.
    pub fn wrenSetSlotNewMap(vm: *mut WrenVM, slot: ::core::ffi::c_int);

    /// Stores null in `slot`.
    pub fn wrenSetSlotNull(vm: *mut WrenVM, slot: ::core::ffi::c_int);

    /// Stores the string `text` in `slot`.
    ///
    /// The `text` is copied to a new string within Wren's heap, so you can free
    /// memory used by it after this is called. The length is calculated using
    /// `strlen()`. If the string may contain any null bytes in the middle, then you
    /// should use [`wrenSetSlotBytes()`] instead.
    pub fn wrenSetSlotString(
        vm: *mut WrenVM,
        slot: ::core::ffi::c_int,
        text: *const ::core::ffi::c_char,
    );

    /// Stores the value captured in `handle` in `slot`.
    ///
    /// This does not release the handle for the value.
    pub fn wrenSetSlotHandle(vm: *mut WrenVM, slot: ::core::ffi::c_int, handle: *mut WrenHandle);

    /// Returns the number of elements in the list stored in `slot`.
    pub fn wrenGetListCount(vm: *mut WrenVM, slot: ::core::ffi::c_int) -> ::core::ffi::c_int;

    /// Reads element `index` from the list in `listSlot` and stores it in
    /// `elementSlot`.
    pub fn wrenGetListElement(
        vm: *mut WrenVM,
        listSlot: ::core::ffi::c_int,
        index: ::core::ffi::c_int,
        elementSlot: ::core::ffi::c_int,
    );

    /// Sets the value stored at `index` in the list at `listSlot`,
    /// to the value from `elementSlot`.
    pub fn wrenSetListElement(
        vm: *mut WrenVM,
        listSlot: ::core::ffi::c_int,
        index: ::core::ffi::c_int,
        elementSlot: ::core::ffi::c_int,
    );

    /// Takes the value stored at `elementSlot` and inserts it into the list stored
    /// at `listSlot` at `index`.
    ///
    /// As in Wren, negative indexes can be used to insert from the end. To append
    /// an element, use `-1` for the index.
    pub fn wrenInsertInList(
        vm: *mut WrenVM,
        listSlot: ::core::ffi::c_int,
        index: ::core::ffi::c_int,
        elementSlot: ::core::ffi::c_int,
    );

    /// Returns the number of entries in the map stored in `slot`.
    pub fn wrenGetMapCount(vm: *mut WrenVM, slot: ::core::ffi::c_int) -> ::core::ffi::c_int;

    /// Returns true if the key in `keySlot` is found in the map placed in `mapSlot`.
    pub fn wrenGetMapContainsKey(
        vm: *mut WrenVM,
        mapSlot: ::core::ffi::c_int,
        keySlot: ::core::ffi::c_int,
    ) -> bool;

    /// Retrieves a value with the key in `keySlot` from the map in `mapSlot` and
    /// stores it in `valueSlot`.
    pub fn wrenGetMapValue(
        vm: *mut WrenVM,
        mapSlot: ::core::ffi::c_int,
        keySlot: ::core::ffi::c_int,
        valueSlot: ::core::ffi::c_int,
    );

    /// Takes the value stored at `valueSlot` and inserts it into the map stored
    /// at `mapSlot` with key `keySlot`.
    pub fn wrenSetMapValue(
        vm: *mut WrenVM,
        mapSlot: ::core::ffi::c_int,
        keySlot: ::core::ffi::c_int,
        valueSlot: ::core::ffi::c_int,
    );

    /// Removes a value from the map in `mapSlot`, with the key from `keySlot`,
    /// and place it in `removedValueSlot`. If not found, `removedValueSlot` is
    /// set to null, the same behaviour as the Wren Map API.
    pub fn wrenRemoveMapValue(
        vm: *mut WrenVM,
        mapSlot: ::core::ffi::c_int,
        keySlot: ::core::ffi::c_int,
        removedValueSlot: ::core::ffi::c_int,
    );

    /// Looks up the top level variable with `name` in resolved `module` and stores
    /// it in `slot`.
    pub fn wrenGetVariable(
        vm: *mut WrenVM,
        module: *const ::core::ffi::c_char,
        name: *const ::core::ffi::c_char,
        slot: ::core::ffi::c_int,
    );

    /// Looks up the top level variable with `name` in resolved `module`,
    /// returns false if not found. The module must be imported at the time,
    /// use [`wrenHasModule`] to ensure that before calling.
    pub fn wrenHasVariable(
        vm: *mut WrenVM,
        module: *const ::core::ffi::c_char,
        name: *const ::core::ffi::c_char,
    ) -> bool;

    /// Returns true if `module` has been imported/resolved before, false if not.
    pub fn wrenHasModule(vm: *mut WrenVM, module: *const ::core::ffi::c_char) -> bool;

    /// Sets the current fiber to be aborted, and uses the value in `slot` as the
    /// runtime error object.
    pub fn wrenAbortFiber(vm: *mut WrenVM, slot: ::core::ffi::c_int);

    /// Returns the user data associated with the WrenVM.
    pub fn wrenGetUserData(vm: *mut WrenVM) -> *mut ::core::ffi::c_void;

    /// Sets user data associated with the WrenVM.
    pub fn wrenSetUserData(vm: *mut WrenVM, userData: *mut ::core::ffi::c_void);
}
